Make the memory-infra service robust in presence of null pids.

Two things are happening here:
1) Some services seem to report PID==0 (crbug.com/733153)
2) The browser process itself reports an invalid identity AND
   PID == 0 because of crbug.com/733165 . A proper fix to
   this will come next.

In the mean time this CL makes the service more robust and
drops on the floor dumps received by clients with an invalid
identity. Also reenables the tests that were disabled 
because of this.

BUG=732927
TBR=isherman (for re-enabling tests)

Change-Id: Ie8b598946593681ab640a9ede7161c22ff1def88
Reviewed-on: https://chromium-review.googlesource.com/535675
Reviewed-by: Primiano Tucci <primiano@chromium.org>
Reviewed-by: Hector Dearman <hjd@chromium.org>
Commit-Queue: Primiano Tucci <primiano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#479635}
Former-commit-id: 7cb90dcac57732686408a127941865df2aa2b577